# corvus

./: .gitignore  Cargo.toml  Readme.md  build.rs  justfile  rustfmt.toml
.cargo/: config.toml
assets/: colors.cob  main.cob  manifest.cob  tabs.cob  theme.cob  widgets.cob
assets/cobweb/: colors.cob  main.cob  manifest.cob  widgets.cob
assets/cobweb/tabs/: main.cob  settings.cob
assets/tabs/: main.cob
cobble/: Cargo.toml
cobble/src/: lib.rs
hooks/: pre-commit  pre-push
src/: app_ui.rs  bridge.rs  cobweb_warning_subscriber.rs  config.rs  explorer.rs  fs.rs  fsio.rs  lib.rs  loading_screen.rs  main.rs  main_tab.rs  resources.rs  settings_tab.rs  traits.rs  ui.rs  ui_events.rs  view_state.rs
src/explorer/: main_tab.rs
src/ui/: loading_screen.rs  main_tab.rs  settings_tab.rs  ui_events.rs  view_state.rs
src/ui/main_tab/: preview.rs
