[package]
name = "cobweb-starter"
version = "0.1.0"
edition = "2024"

[lib]

[features]
default = []
emoji = []

[dependencies]
bevy = "0.16.1"
bevy_cobweb = "0.17.2"
bevy_cobweb_ui = { version = "0.21.0", features = [
    "hot_reload",
    "widgets",
    "colors",
] }
cfg-if = "1.0.1"
const_format = "0.2.34"
derive_more = { version = "2.0.1", features = ["display", "from"] }
itertools = "0.14.0"
# runtime performance improvement: disable bevy's internal logging
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
smol_str = "*" # use same version as bevy/cobweb
thiserror = "2.0.12"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
